[package]
name = "textory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
fs_extra = "1.3"
git2 = "0.20"
inquire = "0.7"
log = "0.4"
lopdf = "0.36"
tempfile = "3.19"
walkdir = "2.5"
# fs_extra = "4.3"
